# ventwig

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  ventwig-project-plan.md
.claude/: settings.local.json
src/ventwig/: __main__.py  cli.py  config.py  errors.py  git_ops.py  lock.py  sync.py
tests/: conftest.py
tests/integration/: test_sync.py
tests/unit/: test_cli.py  test_config.py  test_git_ops.py  test_lock.py
